--- a/client/src/css/Calendar.css
+++ b/client/src/css/Calendar.css
@@ -12,5 +12,11 @@
 
 .day-of-the-week{
     display: inline-block;
-    margin-right: 30px;
+    margin-right: 40px;
+}
+.day-box{
+    display: inline-block;
+    margin-top: 20px;
+    height: 50px;
+    width: 110px;
 }
