--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,8 @@ body {
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #d3bfbb;
+  background-color: 
+  #d6e8f8;
 }
 
 code {
