--- a/client/src/css/NavBar.css
+++ b/client/src/css/NavBar.css
@@ -1,12 +1,12 @@
 .topnav {
-    background-color: #333;
+    background-color:  #d6e8f8;
     overflow: hidden;
   }
   
   /* Style the links inside the navigation bar */
   .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -15,12 +15,12 @@
   
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: white;
+    color: gray;
   }
   
   /* Add a color to the active/current link */
   .topnav a.active {
-    background-color: #04AA6D;
+    background-color: pink;
     color: white;
   }
