changed the css for to do list so they share a common theme and changed css for home to hover over the calendar

--- a/client/src/css/ToDoList.css
+++ b/client/src/css/ToDoList.css
@@ -1,5 +1,5 @@
 .todo-title {
-  color: #7d554d;
+  color: black;
   font-weight: bold;
 }
 .todo-form {
@@ -8,7 +8,7 @@
 }
 
 .todo-list-container {
-  background-color: #ab8b8d;
+  background-color:  #feffff;
   height: 700px;
   width: 700px;
   margin: auto;
