--- a/client/src/css/Calendar.css
+++ b/client/src/css/Calendar.css
@@ -1,3 +1,23 @@
+.home-container{
+  height: 100vh;
+  width: 100vw;
+}
+
+.selection{
+    display: inline-block;
+    margin-top: 6.5rem;
+    margin-left: 20px;
+    vertical-align: top;
+    padding-right:20px;
+}
+.selection-title{
+    background-color: pink;
+    color: white;
+    height: 50px;
+    width: 150px;
+    border-radius: 20px;
+    padding-top: 15px;
+}
 .calendar-container{
     height: 550px;
     width: 800px;
@@ -5,6 +25,8 @@
     margin: 100px auto;
     border-radius: 20px;
     border-color: #d18ea6;
+    display: inline-block;
+    margin-right: 10vw;
 
 }
 
@@ -12,6 +34,8 @@
     border-bottom: solid 3px;
     border-color: #d498a7;
     margin-bottom: 0px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .day-of-the-week-container{
