--- a/client/src/css/Calendar.css
+++ b/client/src/css/Calendar.css
@@ -21,6 +21,7 @@
 .selection-all-months{
     height:500px;
     overflow: scroll;
+    margin-top: 10px;
 }
 .selection-month{
     background-color: white;
@@ -28,7 +29,6 @@
     height: 40px;
     width: 120px;
     border-radius: 30px;
-    padding-top: 10px;
     margin-bottom: 10px;
     margin-top:10px;
 }
