--- a/client/src/css/Calendar.css
+++ b/client/src/css/Calendar.css
@@ -29,11 +29,15 @@
     height: 40px;
     width: 120px;
     border-radius: 30px;
+    padding-top: 10px;
     margin-bottom: 10px;
-    margin-top:10px;
 }
 
-.selection-month:hover{
+.highlighted-month{
+    background-color: #f2d0dc;
+}
+
+.hover-month:hover{
     background-color: rgb(238, 238, 238);
     }
     
